# wind_turbin

./: .gitignore  CMakeLists.txt  README.md
include/: renderer.hpp
src/: main.cpp  renderer.cpp
